# cpu-image-filters

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
app/: CMakeLists.txt
app/include/: reader.hpp  writer.hpp
app/src/: main.cpp  reader.cpp  writer.cpp
conan/: remotes.txt
lib/: CMakeLists.txt
lib/bench/: bench_main.cpp  filter_omp_bench.cpp  filter_seq_bench.cpp
lib/include/: debug.hpp  filter.hpp  filter_omp.hpp  filter_seq.hpp  image.hpp  kernel.hpp
lib/src/: debug.cpp  filter.cpp  filter_omp.cpp  filter_seq.cpp  kernel.cpp
lib/test/: test_main.cpp
